TaskTracker-nginx/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-server
        image: manaphat/node-server:kube
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  selector:
    app: node-server
  ports:
  - port: 5001
    targetPort: 5000
    nodePort: 30002
  type: NodePort
