TaskTracker-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tote.com
      http:
        paths:
          - path: /phpmyadmin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-server-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: tote.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-server-service
                port:
                  number: 5000
